Amend CSS to fix editor checkout layout on small devices

--- a/client/blocks/editor-checkout-modal/style.scss
+++ b/client/blocks/editor-checkout-modal/style.scss
@@ -1,5 +1,9 @@
 
 @import '~@automattic/typography/styles/variables';
+@import '~@wordpress/base-styles/breakpoints';
+@import '~@wordpress/base-styles/mixins';
+
+$editor-checkout-modal-header-height: 60px;
 
 .editor-checkout-modal {
 	position: fixed;
@@ -9,9 +13,14 @@
 	z-index: z-index( 'root', '.main.calypsoify.is-iframe' );
 	height: 100%;
 	overflow: auto;
-	padding: 80px 30px 30px;
-	background: white;
-	transition: all 0.5s ease-in-out;
+	padding: $editor-checkout-modal-header-height 0 0;
+	background: var( --studio-white );
+	transition: right 0.5s ease-in-out;
+	box-sizing: border-box;
+
+	@include break-medium {
+		padding: $editor-checkout-modal-header-height 30px 30px;
+	}
 
 	&.is-open {
 		right: 0;
@@ -24,16 +33,21 @@
 	left: 0;
 	z-index: z-index( 'root', '.main.calypsoify.is-iframe' );
 	width: 100%;
-	height: 0;
-	overflow: visible;
+	overflow: hidden;
+	background: var( --studio-white );
+	
+	@include break-medium {
+		overflow: visible;
+		background: transparent;
+	}
 }
 
 .editor-checkout-modal__wp-logo {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 60px;
-	height: 60px;
+	width: $editor-checkout-modal-header-height;
+	height: $editor-checkout-modal-header-height;
 }
 
 .editor-checkout-modal__close-button.components-button.is-link {
@@ -41,8 +55,8 @@
 	top: 0;
 	right: 0;
 	z-index: 9999;
-	width: 60px;
-	height: 60px;
+	width: $editor-checkout-modal-header-height;
+	height: $editor-checkout-modal-header-height;
 	justify-content: center;
 	color: var( --studio-gray-50 );
 
